--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -66,9 +66,50 @@ html, body {max-width: 100vw; overflow-x: hidden}
 }
 
 
+/*
+    https://stackoverflow.com/questions/1120879/css-checkbox-input-styling
+*/
+
+input[type=checkbox] {
+    cursor: pointer;
+}
+
+input[type=checkbox]:before {
+     content: "";
+     display: block;
+     position: absolute;
+     width: 12px;
+     height: 12px;
+     top: 0;
+     left: 0;
+     border: 1px solid #555555;
+     border-radius: 3px;
+     background-color: white;
+}
+input[type=checkbox]:checked:after {
+    content: "";
+    display: block;
+    width: 4px;
+    height: 10px;
+    border: solid black;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    position: absolute;
+    top: -1px;
+    left: 5px;
+}
+
+
+
+
+
+
+
 .cPanel {
     padding: 15px;
-    background-color: white;
+    background-color: white;  
 }
 
 .filterByTags {
@@ -133,13 +174,6 @@ a.last::before {
     display: inline-block; 
     width: 100%;
     margin-top: 10px;
-}
-
-.playerOne {
-    float: right;
-}
-.playerTwo {
-    float: left;
 }
 
 .postedBy {
