--- a/views/default/create.html
+++ b/views/default/create.html
@@ -4,7 +4,9 @@
 <script src="{{=URL('static','js/tagify.js')}}"></script>
 <script src="{{=URL('static','js/jQuery.tagify.js')}}"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
 
 <link rel="stylesheet"
       href="{{=URL('static','css/styles/default.css')}}">
