--- a/views/default/community.html
+++ b/views/default/community.html
@@ -18,6 +18,12 @@
     <script src="{{=URL('static','js/tagify.js')}}"></script>
     <script src="{{=URL('static','js/jQuery.tagify.js')}}"></script>
 
+    <link rel="stylesheet"
+        href="{{=URL('static','css/styles/default.css')}}">
+    <script src="{{=URL('static','js/highlight.pack.js')}}"></script>
+
+    <script>hljs.initHighlightingOnLoad();</script>
+
 
     <script>
         function pickTextColorBasedOnBgColorAdvanced(bgColor, lightColor, darkColor) {
@@ -132,17 +138,17 @@
                         
                         <div class="cPanel">
                             <div class="form-check">
-                                <input v-bind:disabled="isLoadingResults" v-on:change="fetchNewResults();" type="checkbox" class="form-check-input" id="ak47" value="weapon_ak47" v-model="checkedWeapons">
+                                <input v-bind:disabled="isLoadingResults" v-on:change="fetchNewResults();" type="checkbox" class="form-check-input checkBox" id="ak47" value="weapon_ak47" v-model="checkedWeapons">
                                 <label for="ak47" class="noBottomMargin">AK-47</label>
                             </div>
                             
                             <div class="form-check">
-                                <input v-bind:disabled="isLoadingResults" v-on:change="fetchNewResults();" type="checkbox" class="form-check-input" id="ar2" value="weapon_ar2" v-model="checkedWeapons">
+                                <input v-bind:disabled="isLoadingResults" v-on:change="fetchNewResults();" type="checkbox" class="form-check-input checkBox" id="ar2" value="weapon_ar2" v-model="checkedWeapons">
                                 <label for="ar2" class="noBottomMargin">AR2</label>
                             </div>
                             
                             <div class="form-check">
-                                <input v-bind:disabled="isLoadingResults" v-on:change="fetchNewResults();" type="checkbox" class="form-check-input" id="custom" value="custom_swep" v-model="checkedWeapons">
+                                <input v-bind:disabled="isLoadingResults" v-on:change="fetchNewResults();" type="checkbox" class="form-check-input checkBox" id="custom" value="custom_swep" v-model="checkedWeapons">
                                 <label for="custom" class="noBottomMargin">Custom SWEP</label>
                             </div>
                             
@@ -243,16 +249,18 @@
                     <option value="year">In the past year</option>
                 </select>
                 
+                <i v-if="isLoadingResults" class="fa fa-spinner fa-spin" style="color: black;"></i>
+                
                 <span class="pull-right hidden-sm">
                     <a href="{{=URL('default', 'create')}}"><button class="createJobButton"><i class="fa fa-plus"></i>&#8203;</button></a>
                 </span>
             </div>
             
             
-            <div v-if="showing_job_details" class="row no-gutters" v-bind:style="{ background: '#' + job_color + '59' }" style="margin-top: 8px; position: relative;">
-                <i v-on:click="showing_job_details = !showing_job_details" class="fa fa-close closeJobDetails" v-bind:class="getTextClass(job_color, true)" style="font-size: 36px;"></i>
+            <div v-if="showing_job_details" class="row no-gutters rounded" v-bind:style="{ background: '#' + job_color + '59' }" style="margin-top: 8px; position: relative;">
+                <i v-on:click="close_job_details()" class="fa fa-close closeJobDetails" v-bind:class="getTextClass(job_color, true)" style="font-size: 36px;"></i>
                 
-                <div style="padding-top: 36px; width: 100%;" v-bind:style="{ background: '#' + job_color }">
+                <div class="roundedTop" style="padding-top: 36px; width: 100%;" v-bind:style="{ background: '#' + job_color }">
                     
                     <div class="whiteGloss">
                         <img v-bind:src="getModelURL(job_model)" style="float: left; padding-left: 12px;"/>
@@ -263,24 +271,80 @@
                     </div>
                 </div>
                 
-                
-                <div style="font-size: 18px; font-weight: bold; color: rgba(0, 0, 0, 0.75); padding: 12px;">
-                    ${ job_desc }
+                <div style="background-color: rgba(32, 32, 32); width: 100%;">
+                    <div class="tab noSelect">
+                        <div class="tablinks" v-bind:class="{ active: (job_current_tab == 0) }" v-on:click="openTab(0)">Details</div>
+                        <div class="tablinks" v-bind:class="{ active: (job_current_tab == 1) }" v-on:click="openTab(1)">Code</div>
+                        <div class="tablinks" v-bind:class="{ active: (job_current_tab == 2) }" v-on:click="openTab(2)">Comments</div>
+                    </div>
                 </div>
                 
-                <div class="table-responsive">
+                <div id="Code" v-bind:style="{ display: (job_current_tab == 1) ? 'block' : 'none' }" style="width: 100%; background: rgba(240, 240, 240, 1);">
+                
+                
+<div class="container">
+    <div class="row">
+        <div class="col-md-12" style="padding: 0 !important;">
+            <div class="pull-right noSelect pointer" id="copyButton" v-on:click="copy_code" style="background-color: steelblue; color: white; padding: 10px 15px 10px 15px; border-top-left-radius: 4px;">Copy</div>
+        </div>
+    </div>    
+</div>
+                    
+<pre style="padding: 0px 32px 32px 32px; margin-bottom: 0px;"><code><div id="genCode">TEAM_${job_job_id} = DarkRP.createJob(<span class="red">"${ job_name }"</span>, {
+    color = Color(<span class="red">${ (job_color_rgb[0]) }</span>, <span class="red">${ (job_color_rgb[1]) }</span>, <span class="red">${ (job_color_rgb[2]) }</span>),
+    model = "<span class="red">${ job_model }"</span>,
+    weapons = {${ job_weapons }},
+    command = <span class="red">"${job_command}"</span>
+    max = <span class="red">${ job_max_players }</span>,
+    salary = <span class="red">${ job_salary }</span>,
+    vote = <span class="blue">${ job_vote }</span>,
+    admin = <span class="blue">${ job_admin_only }</span>
+})</div></code></pre>
+                
+                
+</div>
+
+                <!-- https://stackoverflow.com/questions/26983301/how-to-make-a-table-column-be-a-minimum-width -->
+                <div id="Details" class="table-responsive" style="padding: 20px;" v-bind:style="{ display: (job_current_tab == 0) ? 'block' : 'none' }">
                     <table class="table table-striped">
                         <tbody>
                             <tr>
-                                <th scope="row" style="width: 20%">Max players:</th>
-                                <td style="word-break: break-all; max-width: 80%; vertical-align: bottom;">${ job_max_players }</td>
+                                <td class="min" style="">Description:</td>
+                                <td style="vertical-align: bottom; font-size: 18px; font-weight: bold; color: rgba(0, 0, 0, 0.75);">${ job_desc }</td>
                             </tr>
+                            
                             <tr>
-                                <th scope="row" style="width: 20%">Salary:</th>
-                                <td style="word-break: break-all; max-width: 80%; vertical-align: bottom;">${ job_salary }</td>
+                                <td class="min">Salary:</td>
+                                <td style="vertical-align: bottom; color: rgba(0, 0, 0, 0.75);">${ job_salary }</td>
+                            </tr>
+                            
+                            <tr>
+                                <td class="min">Max Players:</td>
+                                <td style="vertical-align: bottom; color: rgba(0, 0, 0, 0.75);">${ job_max_players }</td>
+                            </tr>
+                            
+                            <tr>
+                                <td class="min">Vote:</td>
+                                <td style="vertical-align: bottom; color: rgba(0, 0, 0, 0.75);">${ job_vote }</td>
+                            </tr>
+                            
+                            <tr>
+                                <td class="min">Admin Only:</td>
+                                <td style="vertical-align: bottom; color: rgba(0, 0, 0, 0.75);">${ job_admin_only }</td>
+                            </tr>
+                            
+                            <tr v-if="job_weapons.length > 0">
+                                <td class="min">Weapons:</td>
+                                <td style="vertical-align: bottom; color: rgba(0, 0, 0, 0.75);">${ job_weapons }</td>
                             </tr>
                         </tbody>
                     </table>
+                </div>
+                
+                <div class="postedBy">
+                    <div class="postedByText">
+                        Posted by: ${ job_created_by }
+                    </div>
                 </div>
             </div>
             
@@ -302,7 +366,7 @@
                                     <div class="myTextBottomLeft" v-bind:class="getTextClass(job.color)">
                                         ${job.name}
                                     </div>
-                                </div>
+                                </div>                                
                                 
                                 <div class="jobDescription" v-bind:style="{ background: '#' + job.color + '59' }">
                                     ${job.description}
