--- a/views/layout.html
+++ b/views/layout.html
@@ -4,7 +4,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-
+        
+        <link rel="shortcut icon" href="{{=URL('static','favicon.ico')}}" type="image/x-icon">
+        
         <link href="{{=URL('static','css/myapp.css')}}" rel="stylesheet" type="text/css"/>
         <link href="{{=URL('static','css/tagify.css')}}" rel="stylesheet" type="text/css"/>
         <link href="{{=URL('static','css/web2py.css')}}" rel="stylesheet" type="text/css"/>
